--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,1 +1,7 @@
 # https://www.playframework.com/documentation/latest/Configuration
+// Enable richer akka logging
+akka {
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
+  loglevel = "DEBUG"
+  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+}
